[package]
name = "moonbeam-vrf"
authors = { workspace = true }
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Moonbeam
session-keys-primitives = { workspace = true, features = [ "std" ] }

# Nimbus
nimbus-primitives = { workspace = true, features = [ "std" ] }

# Polkadot
polkadot-primitives = { workspace = true }
