[package]
name = "moonbeam-cli"
authors = { workspace = true }
edition = "2021"
version = "0.30.0"

[dependencies]
clap = { workspace = true, features = [ "derive" ] }
log = { workspace = true }
parity-scale-codec = { workspace = true }

# Moonbeam
moonbeam-cli-opt = { workspace = true }
moonbeam-service = { workspace = true }

# Substrate
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", optional = true }

# Cumulus / Nimbus
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true, features = [ "std" ] }
nimbus-primitives = { workspace = true, features = [ "std" ] }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-parachain = { workspace = true, features = [ "std" ] }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[features]
default = [ "moonbase-native", "moonbeam-native", "moonriver-native", "westend-native" ]

westend-native = [ "polkadot-service/westend-native" ]

moonbase-native = [ "moonbeam-service/moonbase-native", "westend-native" ]
moonbeam-native = [ "moonbeam-service/moonbeam-native" ]
moonriver-native = [ "moonbeam-service/moonriver-native" ]

runtime-benchmarks = [ "moonbeam-service/runtime-benchmarks", "polkadot-service/runtime-benchmarks" ]
try-runtime = [
	"moonbeam-service/try-runtime",
	"try-runtime-cli/try-runtime",
]

moonbase-runtime-benchmarks = [ "moonbeam-service/moonbase-runtime-benchmarks" ]
