[package]
name = "pallet-ethereum-xcm"
authors = [ "Parity Technologies <admin@parity.io>" ]
description = "Xcm Transact compatibility for pallet-etherum."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/frontier/"
version = "1.0.0-dev"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }
serde = { workspace = true, optional = true }

# Parity
ethereum-types = { workspace = true }
parity-scale-codec = { workspace = true }
rlp = { workspace = true }
scale-info = { workspace = true, features = [ "derive" ] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "4.0.0-dev", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "4.0.0-dev", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "4.0.0-dev", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "6.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "6.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "4.0.0", default-features = false }

# Frontier
fp-ethereum = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }
xcm-primitives = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-evm-precompile-proxy = { workspace = true }

pallet-ethereum = { workspace = true, features = [ "forbid-evm-reentrancy", "std" ] }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy", "std" ] }
pallet-proxy = { workspace = true, features = [ "std" ] }

hex = { workspace = true }
# Parity
libsecp256k1 = { workspace = true, features = [ "hmac", "static-context" ] }
# Substrate FRAME
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "4.0.0-dev" }
# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", version = "6.0.0" }

[features]
default = [ "std" ]
std = [
	"ethereum-types/std",
	"ethereum/std",
	# Frontier
	"fp-ethereum/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Substrate FRAME
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	# Parity
	"parity-scale-codec/std",
	"rlp/std",
	"scale-info/std",
	"serde",
	# Substrate
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
]
runtime-benchmarks = [ "frame-benchmarking", "frame-benchmarking/runtime-benchmarks", "frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks", "pallet-evm/runtime-benchmarks", "xcm-primitives/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]
