[package]
name = "pallet-maintenance-mode"
authors = { workspace = true }
description = "Puts a FRAME-based runtime into maintenance mode where restricted interactions are allowed."
edition = "2021"
version = "0.1.0"

[dependencies]

# Local
xcm-primitives = { workspace = true, optional = true }

# Crates.io
log = { workspace = true }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Cumulus
cumulus-primitives-core = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[features]
default = [ "std", "xcm-support" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]
xcm-support = [ "cumulus-primitives-core", "xcm-primitives" ]
