[package]
name = "pallet-evm-precompile-crowdloan-rewards"
authors = { workspace = true }
description = "A Precompile to make crowdloan rewards accessible to pallet-evm"
edition = "2021"
version = "0.6.0"

[dependencies]
log = { workspace = true }
num_enum = { workspace = true }
rustc-hex = { workspace = true }

# Moonbeam
pallet-crowdloan-rewards = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

[dev-dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

# Moonbeam
precompile-utils = { workspace = true, features = [ "std", "testing" ] }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Cumulus
cumulus-pallet-parachain-system = { workspace = true, features = [ "std" ] }
cumulus-primitives-core = { workspace = true, features = [ "std" ] }
cumulus-primitives-parachain-inherent = { workspace = true, features = [ "std" ] }
cumulus-test-relay-sproof-builder = { workspace = true, features = [ "std" ] }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-test-relay-sproof-builder/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-crowdloan-rewards/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
]
